tests/fixtures/errors/arm_named_tag.z
# arm_named_tag.z -- `tag` names the discriminator child of a variant/union
# and cannot be declared as an arm (E0037).

marked: variant {
    tag: null
    other: null
}

main: function is {
    m: marked.other
    print "made \{m.other}"
}
